fix message on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1130,12 +1130,11 @@ header nav ul li a:hover::before {
 #contact form p {
   font-size: 1.6rem;
   font-style: italic;
+  width: 85%;
+  text-align: center;
   color: #00c000;
   position: absolute;
   bottom: 27%;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
 }
 
 @media (min-width: 600px) {
